# computer-club-test-yadro

./: .gitignore  CMakeLists.txt  README.md  computer_club.cpp  computer_club.h  main.cpp
tests/: test_event.cpp  test_parsers.cpp  test_table_info.cpp  test_time.cpp
